# Obelisk

./: CLAUDE.md  Cargo.toml  README.md  ideas.md
config/: constants.toml  dots.toml  names.toml  rarities.toml  skills.toml
config/affixes/: accessories.toml  armour.toml  scaling.toml  status_effects.toml  weapon.toml
config/base_types/: weapons.toml
config/tables/: gems_common.toml
config/tables/chests/: common.toml
config/tables/monsters/: boss.toml  goblin.toml
loot_core/: README.md
loot_core/src/: config.rs  currency.rs  generator.rs  item.rs  lib.rs  storage.rs  types.rs
stat_core/: Cargo.toml  README.md
stat_core/src/: lib.rs  prelude.rs  types.rs
stat_core/src/combat/: resolution.rs  result.rs
stat_core/src/config/: constants.rs  dots.rs  mod.rs  skills.rs
stat_core/src/damage/: calculation.rs  generator.rs  packet.rs
stat_core/src/defense/: armour.rs  evasion.rs  mod.rs  resistance.rs
stat_core/src/dot/: active.rs  mod.rs  tick.rs  types.rs
stat_core/src/source/: buff.rs  gear.rs
stat_core/src/stat_block/: aggregator.rs  computed.rs  mod.rs
tables_core/: Cargo.toml  README.md
tables_core/src/: config.rs  drop.rs  lib.rs  registry.rs  table.rs
