[package]
name = "stat_core"
version.workspace = true
edition.workspace = true
description = "Core stat management library for game entities"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
rand.workspace = true
thiserror.workspace = true
loot_core.workspace = true

[dev-dependencies]
proptest = "1.4"
